# pcap-stats

./: .gitignore  CMakeLists.txt  README.md  build-debug.sh  build.sh  requirements.txt
cmake/: find_zstd.cmake
plots/: equinix-nyc.dirA.20190117-130000-131000.UTC.anon.pcap.txt  equinix-nyc.dirA.20190117-130000-131000.UTC.anon.pcap_100000Mbps.txt  univ2.pcap.txt  univ2.pcap_100000Mbps.txt
reports/: 20250220-130000.dira.anon-100M-packets.json  20250220-130000.json  equinix-nyc.dirA.20190117-130000-131000.UTC.anon.pcap.json  equinix-nyc.dirA.20190117-130000-131000.UTC.anon.pcap_100000Mbps.json  univ2.pcap.json  univ2.pcap_100000Mbps.json
src/: cdf.h  clock.h  double_chain.cpp  double_chain.h  flow_tracker.cpp  flow_tracker.h  main.cpp  net.h  pcap_reader.cpp  pcap_reader.h  system.h  traffic_stats_tracker.cpp  traffic_stats_tracker.h  types.h
tools/: build_stats_report_table.py  orchestrator.py  plot_flow_dts_us_cdf.py  plot_flow_duration_us_cdf.py  plot_pcap_stats.py  plot_pkt_bytes_cdf.py  plot_pkts_per_flow_cdf.py  plot_top_k_flows_bytes_cdf.py  plot_top_k_flows_cdf.py
tools/utils/: heatmap.py  plot_config.py  plotters.py  stats_report.py  tofino_resource_parser.py  values.py
